2005-01-26  John Luke  <john.luke@gmail.com>

	* Makefile.am:
	* Gui/SourceEditorDisplayBinding.cs: use Gnome.Vfs

2005-01-26  Todd Berman  <tberman@off.net>

	* CodeCompletion/CompletionListWindow.cs:
	* CodeCompletion/CodeCompletionData.cs:
	* CodeCompletion/ListWindow.cs:
	* CodeCompletion/DeclarationViewWindow.cs: A bit of a nicer overload
	dialog.

2005-01-26  Alexandre Gomes  <alexmipego@gmail.com>

	* CodeCompletion/CompletationListWindow.cs: Fixed completion
	window when near screen edges.

2005-01-26  Alexandre Gomes  <alexmipego@gmail.com>

	* CodeCompletion/CompletationListWindow.cs:
	* CodeCompletion/ListWindow.cs: Closes bug #71686. Also makes
	list sorted case-isensitive.

2005-01-25  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorDisplayBinding.cs: Use new
	IWorkbenchWindow.ShowNotification for when a file has been modified
	outside MD.

2005-01-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Pads/CompilerMessageView.cs: 
	* Makefile.am: CompilerMessageView moved to Monodevelop.Base. 
	
	* Commands/SearchCommands.cs:
	* Search/SearchReplaceManager.cs:
	* Search/DocumentIterator/CurrentDocumentIterator.cs:
	* Search/DocumentIterator/WholeProjectDocumentIterator.cs:
	* Search/DocumentIterator/AllOpenDocumentIterator.cs:
	* Gui/SourceEditorDisplayBinding.cs: New GUI for warning about modified
	files.

2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/SourceEditorDisplayBinding.cs: Use a different method for detecting
	that a file change event is the result of a save operation (the current
	doesn't work if the that event is delayed).

2005-01-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/Dialogs/ExportProjectToHtmlDialog.cs:
	* InsightWindow/MethodInsightDataProvider.cs:
	* InsightWindow/InsightWindow.cs:
	* InsightWindow/IInsightDataProvider.cs:
	* InsightWindow/IndexerInsightDataProvider.cs:
	* CodeCompletion/CompletionListWindow.cs
	* CodeCompletion/CompletionWindow.cs:
	* CodeCompletion/CommentCompletionDataProvider.cs: 