@@ -1,3 +1,8 @@
+2005-01-27  Christian Hergert <chris@mosaix.net>
+ 
+        * Gui/Pads/HelpBrowser/MonodocTreePad.cs: Fix to use new ShowView in
+        DefaultWorkbench.
+
 2005-01-27  John Luke  <john.luke@gmail.com>
 
 	* Makefile.am: 
