@@ -1,3 +1,8 @@
+2005-01-26  Christian Hergert <chris@mosaix.net>
+                                                                                                                                                             
+        * Gui/SourceEditorView.cs: Fix for new ShowView method in
+        DefaultWorkbench.
+
 2005-01-26  John Luke  <john.luke@gmail.com>
 
 	* Makefile.am:
